[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/EmptyLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Block.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/Obstacle.tscn" type="PackedScene" id=4]

[node name="Level02" type="Spatial"]
script = ExtResource( 1 )

[node name="EmptyLevel" parent="." instance=ExtResource( 2 )]

[node name="WallNorth" parent="EmptyLevel" index="3"]
color = 2

[node name="WallEast" parent="EmptyLevel" index="5"]
color = -1
has_to_connect = false

[node name="WallWest" parent="EmptyLevel" index="6"]
color = 3
has_to_connect = true

[node name="Block" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )
item_name = "block"
color = -1
has_to_connect = true

[node name="Obstacle" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -1 )
item_name = "obstacle"
color = -1

[node name="Block2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )
item_name = "block2"
color = 2
has_to_connect = true
fixed_color = true

[node name="Block3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -3 )
item_name = "block3"
color = -1
has_to_connect = true

[connection signal="back_to_menu" from="EmptyLevel" to="." method="back_to_menu"]
[connection signal="close_level" from="EmptyLevel" to="." method="close_level"]
[connection signal="next_level" from="EmptyLevel" to="." method="next_level"]
[connection signal="play_sound" from="EmptyLevel" to="." method="play_sound"]
[connection signal="mouse_entered" from="EmptyLevel/LevelMenu/HBoxContainer/VBoxContainer/NextButton" to="EmptyLevel" method="mouse_entered"]
[connection signal="mouse_exited" from="EmptyLevel/LevelMenu/HBoxContainer/VBoxContainer/NextButton" to="EmptyLevel" method="mouse_exited"]
[connection signal="mouse_entered" from="EmptyLevel/LevelMenu/HBoxContainer/VBoxContainer/BackButton" to="EmptyLevel" method="mouse_entered"]
[connection signal="mouse_exited" from="EmptyLevel/LevelMenu/HBoxContainer/VBoxContainer/BackButton" to="EmptyLevel" method="mouse_exited"]

[editable path="EmptyLevel"]
